--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/1051127040834805864/1189948480911835247/image.png?ex=65a004e2&is=658d8fe2&hm=b2387a4c2520dfa60e8b736308fdab505e6a8a164ed8bc6f7a1040e9fede1bc5&">
     <title>MERN Stack Online Book Shop</title>
   </head>
   <body>
